--- a/index.html
+++ b/index.html
@@ -4,41 +4,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
     <title>Bootstrap Team Gallery</title>
   </head>
   <body>
     <header>
-        <div class="container">Our Experienced & Professional Team</div>
-        <div class="container">Talent wins games, but teamwork and intelligence win championships.</div>
-        <div class="container">– Michael Jordan</div>
+        <div class="centrato"> 
+            <div class="container" id="titolo">Our Experienced & Professional Team</div>
+            <div class="container" id="citazione">Talent wins games, but teamwork and intelligence win championships.</div>
+            <div class="container" id="michael">– Michael Jordan</div>
+        </div>   
     </header>
     <main>
-        <div class="container">
+        <div class="container centrato">
             <div class="row">
                 <div class="col">
                     <img src="img/pic1.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
-                    <div class="nome"></div>
-                    <div class="professione"></div>
-                    <div class="descrizione"></div>
+                    <div class="nome">Alessandra Bellone</div>
+                    <div class="professione">Full Stack Developer</div>
+                    <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
                 <div class="col">
                     <img src="img/pic2.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
-                    <div class="nome"></div>
-                    <div class="professione"></div>
-                    <div class="descrizione"></div>
+                    <div class="nome">Muhamad Putera</div>
+                    <div class="professione">Graphic Designer</div>
+                    <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
                 <div class="col">
                     <img src="img/pic3.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
-                    <div class="nome"></div>
-                    <div class="professione"></div>
-                    <div class="descrizione"></div>
+                    <div class="nome">Amil Seilsepur</div>
+                    <div class="professione">Data Analyst</div>
+                    <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
                 <div class="col">
                     <img src="img/pic4.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
-                    <div class="nome"></div>
-                    <div class="professione"></div>
-                    <div class="descrizione"></div>
+                    <div class="nome">Jessica Felicio</div>
+                    <div class="professione">Front End Developer</div>
+                    <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
             </div>
         </div>
