--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
     <main>
         <div class="container centrato">
             <div class="row">
-                <div class="col">
+                <div class="col-lg-3 col-sm-6 col-12">
                     <img src="img/pic1.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
                     <div class="nome">Alessandra Bellone</div>
                     <div class="professione">Full Stack Developer</div>
                     <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3 col-sm-6 col-12">
                     <img src="img/pic2.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
                     <div class="nome">Muhamad Putera</div>
                     <div class="professione">Graphic Designer</div>
                     <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3 col-sm-6 col-12">
                     <img src="img/pic3.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
                     <div class="nome">Amil Seilsepur</div>
                     <div class="professione">Data Analyst</div>
                     <div class="descrizione">Sed a lacus augue. Duis porta molestie dignissim. Mauris rutrum tempor augue. Morbi molestie vestibulum vestibulum.</div>
                 </div>
-                <div class="col">
+                <div class="col-lg-3 col-sm-6 col-12">
                     <img src="img/pic4.jpeg" class="rounded-circle" alt="Foto profilo" width="100%">
                     <div class="nome">Jessica Felicio</div>
                     <div class="professione">Front End Developer</div>
